2014-10-14  Brent Fulgham  <bfulgham@apple.com>

        [Win] Unreviewed gardening. Ignore Visual Studio *.sdf files.

        * WTF.vcxproj: Modified property svn:ignore.

2014-10-13  Antti Koivisto  <antti@apple.com>

        Add StringCapture helper for thread-safe lambda capture
        https://bugs.webkit.org/show_bug.cgi?id=137664

        Reviewed by Anders Carlsson.

        There is currently no clean way to capture a String in a thread-safe manner. This will now work:

        StringCapture stringCapture(string);
        auto lambdaThatRunsInAnotherThread = [stringCapture] { String string = stringCapture.string(); ... }

        This type won't be necessary with C++14 initialized lambda capture: [string = string.isolatedCopy()].

        * wtf/text/WTFString.h:
        (WTF::StringCapture::StringCapture): Create isolated copy in copy-constructor.
        (WTF::StringCapture::string):

2014-10-11  KwangHyuk Kim  <hyuki.kim@samsung.com>

        [EFL] Enable WebP support.
        https://bugs.webkit.org/show_bug.cgi?id=136156

        Reviewed by Gyuyoung Kim.

        Enable WTF_USE_WEBP macro for WK2 Efl.

        * wtf/Platform.h:

2014-10-11  Carlos Garcia Campos  <cgarcia@igalia.com>

        [GLIB] Split GMainLoopSource moving thread safe implementation to its own class GThreadSafeMainLoopSource
        https://bugs.webkit.org/show_bug.cgi?id=137485

        Reviewed by Sergio Villar Senin.

        We made GMainLoopSource thread safe, but in most of the cases we
        know the sources are used by a single thread, which has an impact
        in the performance (mutex, GCancellable, etc.). The new class
        GThreadSafeMainLoopSource inherits from GMainLoopSource overriding
        the new virtual methods and calling the parent for the common code.
        GMutexLocker now supports recursive mutexes, it's a template that
        can wrap a GMutex or a GRecMutex. GThreadSafeMainLoopSource uses a