@@ -1,3 +1,12 @@
+2014-10-16  Dan Bernstein  <mitz@apple.com>
+
+        OSObjectPtr is missing leakRef()
+        https://bugs.webkit.org/show_bug.cgi?id=137798
+
+        Reviewed by Sam Weinig.
+
+        * wtf/OSObjectPtr.h:
+
 2014-10-14  Brent Fulgham  <bfulgham@apple.com>
 
         [Win] Unreviewed gardening. Ignore Visual Studio *.sdf files.
